Modified OpenTSDB docker file